--- a/Login.html
+++ b/Login.html
@@ -16,6 +16,7 @@
         margin:0;
         background:url('images/header_bg.jpg') repeat-x;
         background-color:#062d3a;
+        font-family: "Trebuchet MS";
       	}
         #overlay {
           background:url('images/infinite_bg.jpg') repeat-x;
@@ -29,6 +30,7 @@
         margin: 0 auto;
         max-width: 1000px;
         text-align:center;
+        position: relative;
       }
       .container > hr {
         margin: 60px 0;
@@ -45,12 +47,27 @@
       #enter-button:hover {
         background:url('images/facebook-hover.jpg');
       }
+      #desc {
+        opacity: 0.9;
+        background: #062d3a;
+        color:#FFF;
+        position: absolute;
+        top:400px;
+        left:700px;
+        width:300px;
+        font-size: 16px;
+        padding:10px;
+        border-radius:10px;
+      }
     </style>
 </head>
 
 <body>
   <div id="overlay"></div>
 	<div class="container">
+    <div id="desc">
+      Create your own business and start partnering with your friends into Bigger Fish's online Universe.
+    </div>
 		<img src="images/header_img.jpg" alt="">
     <a href="#" id="enter-button"></a>
 	</div>
