--- a/Empty_file.html
+++ b/Empty_file.html
@@ -27,7 +27,7 @@
       /* Custom container */
       .container {
         margin: 0 auto;
-        max-width: 1000px;
+        max-width: 997px;
         background:url('images/header_infinite.jpg') repeat-x;
         background-color:#021319;
       }
@@ -37,9 +37,11 @@
 <body>
   <div id="overlay"/>
 	<div class="container">
-		<img src="images/header.jpg" alt="">
+    <div class="masthead">
+		  <img src="images/header.jpg" alt="">
+    </div>
 	</div>
-  
+
 	<script src="js/bootstrap.js"></script>
 </body>
 </html>
