--- a/Login.html
+++ b/Login.html
@@ -14,17 +14,11 @@
         padding-top: 0px;
         padding-bottom: 60px;
         margin:0;
-        background:url('images/header_bg.jpg') repeat-x;
+        background:url('images/infinite_bg.jpg') repeat-x;
         background-color:#062d3a;
         font-family: "Trebuchet MS";
       	}
-        #overlay {
-          background:url('images/infinite_bg.jpg') repeat-x;
-          position:absolute;
-          z-index:-1;
-          height:100%;
-          width:100%;
-        }
+        
       /* Custom container */
       .container {
         margin: 0 auto;
@@ -52,7 +46,7 @@
         background: #062d3a;
         color:#FFF;
         position: absolute;
-        top:400px;
+        top:450px;
         left:700px;
         width:300px;
         font-size: 16px;
@@ -63,10 +57,9 @@
 </head>
 
 <body>
-  <div id="overlay"></div>
 	<div class="container">
     <div id="desc">
-      Create your own business and start partnering with your friends into Bigger Fish's online Universe.
+      Start your own company and partner with your friends in Bigger Fish's online Universe.
     </div>
 		<img src="images/header_img.jpg" alt="">
     <a href="#" id="enter-button"></a>
