Modified Signup User

--- a/Signup-user.html
+++ b/Signup-user.html
@@ -16,7 +16,7 @@
         padding-bottom: 60px;
         background:url('images/header_infinite.jpg') repeat-x;
         background-color:#021319;
-        font-family: "Trebuchet MS";
+        font-family: "Segoe UI";
 
         }
         #overlay {
@@ -33,14 +33,14 @@
       }
       .form-container {
         background: #FFF;
-        color:#FFF;
+        color:#036;
         font-size: 20px;
         border-radius: 15px;
         width: 400px;
         margin-left: 300px;
         margin-top: 30px;
         min-height: 300px;
-
+        padding:10px;
       }
       #signup {
 
@@ -56,11 +56,14 @@
         border-radius:10px;
         border:1px solid #222;
         float:left;
+        margin-top:50px;
+        margin-left:15px;
       }
       #form {
         float:left;
         margin-left:40px;
         text-align: left;
+        padding:10px;
       }
       #form > label {
         display: block;
@@ -79,7 +82,7 @@
   <form id="signup" onsubmit="return false;">
   <img src="http://graph.facebook.com/ra.du.79/picture?type=large" id="fbpic" />
   <div id="form">
-    <label>I am</label>
+    <label>My name is</label>
     <input type="text" id="nickname" value="Ra Du"/><br>
     <input type="submit" value="Okay, Go On">
   </div>
