--- a/Login.html
+++ b/Login.html
@@ -16,7 +16,7 @@
         margin:0;
         background:url('images/infinite_bg.jpg') repeat-x;
         background-color:#062d3a;
-        font-family: "Trebuchet MS";
+        font-family: "Segoe UI";
       	}
         
       /* Custom container */
