--- a/Signup-user.html
+++ b/Signup-user.html
@@ -8,19 +8,23 @@
     <meta name="author" content="">
   <!-- Bootstrap -->
   <link href="css/bootstrap.css" rel="stylesheet" media="screen">
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="static/css/bootstrap.css" rel="stylesheet">
+
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="bootstrap/js/bootstrap.js" ></script>
+    <link href="metric.css" rel="stylesheet">
     <style type="text/css">
       body {
         margin: 0;
         padding-top: 0px;
         padding-bottom: 60px;
-        background:url('images/header_infinite.jpg') repeat-x;
+        background:url('static/images/header_infinite.jpg') repeat-x;
         background-color:#021319;
         font-family: "Segoe UI";
 
         }
         #overlay {
-          background:url('images/header-inf_FINAL.jpg') repeat-x;
+          background:url('static/images/header-inf_FINAL.jpg') repeat-x;
           z-index: -1;
           height: 100%;
           width: 100%;
@@ -30,6 +34,7 @@
         margin: 0 auto;
         max-width: 1000px;
         text-align: center;
+        position: relative;
       }
       .form-container {
         background: #FFF;
@@ -68,26 +73,120 @@
       #form > label {
         display: block;
       }
+      .inner {
+        background:#FFF;
+        border-radius:10px;
+        position: relative;
+      }
+      .header {
+        height:120px;
+        background:url('static/images/header.png') no-repeat;
+      }
+      .name {
+        height:53px;
+        background:#000;
+        opacity: 0.6;
+        color:#FFF;
+        overflow: visible;
+        float:right;
+        padding:20px 20px 0 20px;
+        font-weight: bold;
+      }
+      .name:hover {
+        color:#CCF;
+      }
+      .user-image {
+        height:73px;
+        float:right;
+      }
+      .dollars {
+        font-size:20px;
+        color: #FFF;
+        float:right;
+      }
+      .breadcrumbs {
+        position: absolute;
+        top:85px;
+        left:-220px;
+        width:1150px;
+        color:#FFF;
+      }
+      #company {
+        position: absolute;
+        top:10px;
+        left:10px;
+        width:200px;
+        height:250px;
+      }
+      #popoverData {
+        text-decoration: none;
+      }
+
+
     </style>
 </head>
 
 <body>
   <div id="overlay"/>
   <div class="container">
-    <img src="images/header.png" alt="">
+    <div class="header">
 
-    <div class="form-title">Who Are You?</div>
-  <div class="form-container">
+         <a id="popoverData" class ="name" href="#" 
+    data-content='
+    <div style="color: #3E5696; white-space:nowrap; min-width:200px; font-weight:bold"><div class="tag inline-block">
+            Worth: </div>
+            <div class=" inline-block">
+          $6,000
+         </div>
+         <br/>
+         <div class="tag inline-block">
+            Stock: </div>
+            <div class=" inline-block" >
+              $1,000
+         </div>
 
-  <form id="signup" onsubmit="return false;">
-  <img src="http://graph.facebook.com/ra.du.79/picture?type=large" id="fbpic" />
-  <div id="form">
-    <label>My name is</label>
-    <input type="text" id="nickname" value="Ra Du"/><br>
-    <input type="submit" value="Okay, Go On">
-  </div>
-  </form>
-  </div>
+         <br/>
+         <div class="tag inline-block">
+            Reputation: </div>
+            <div class="meter inline-block" style="width: 50%; background-color:#800335">
+         </div>
+
+         <br/>
+         <div class="tag inline-block">
+            Influence: </div>
+            <div class="meter inline-block" style="width: 30%; ">
+         </div>
+         
+         <br/>
+         <div class="tag inline-block">
+            Notoriety: </div>
+            <div class="meter inline-block" style="width: 20%; background-color:green;">
+         </div><br>
+          <div class="tag inline-block">
+            Level: </div>
+            <div class=" inline-block" >
+              <img src="static/images/perch.png" style="height:20px"/> Perch
+         </div>
+         </div>'
+          rel="popover" 
+     data-placement="bottom" data-original-title="Your Standings" data-trigger="hover">Radu &nbsp; &#9661;</a>
+    
+
+      <script>
+$('#popoverData').popover({html: true});
+$('#popoverOption').popover({ trigger: "hover" });
+</script>
+
+    <img src="https://graph.facebook.com/ra.du.79/picture?type=normal" class="user-image"/>
+    </div>
+    <div class="breadcrumbs">
+      Dashboard
+      <div class="dollars"><b>$1,000</b> in stock</div>
+    </div>
+    <div class="inner">
+      <a href="/company.html" id="company"></a>
+      <img src="static/images/interfata 1.png"/>
+    </div>
   </div>
 
   <script src="js/bootstrap.js"></script>
