Added last htmls

--- a/company.html
+++ b/company.html
@@ -111,12 +111,12 @@
         width:1150px;
         color:#FFF;
       }
-      #company {
+      #modify {
         position: absolute;
-        top:10px;
-        left:10px;
-        width:200px;
-        height:250px;
+        top:270px;
+        left:250px;
+        width:600px;
+        height:100px;
       }
       #popoverData {
         text-decoration: none;
@@ -180,12 +180,14 @@ $('#popoverOption').popover({ trigger: "hover" });
     <img src="https://graph.facebook.com/ra.du.79/picture?type=normal" class="user-image"/>
     </div>
     <div class="breadcrumbs">
-      Dashboard
+      <span style="position:relative; left:30px">
+      Dashboard >> Internet Systems
+    </span>
       <div class="dollars"><b>$1,000</b> in stock</div>
     </div>
     <div class="inner">
-      <a href="company.html" id="company"></a>
-      <img src="static/images/interfata 1.png"/>
+      <a href="modify.html" id="modify"></a>
+      <img src="static/images/interfata afacere.png"/>
     </div>
   </div>
 
