--- a/Login.html
+++ b/Login.html
@@ -14,7 +14,7 @@
         padding-top: 0px;
         padding-bottom: 60px;
         margin:0;
-        background:url('images/infinite_bg.jpg') repeat-x;
+        background:url('static/images/infinite_bg.jpg') repeat-x;
         background-color:#062d3a;
         font-family: "Segoe UI";
       	}
@@ -33,13 +33,13 @@
         position:relative;
         bottom:15px;
         display:inline-block;
-        background:url('images/enter-button.jpg');
+        background:url('/static/images/enter-button.jpg');
         width:205px;
         height: 76px;
         text-align: center;
       }
       #enter-button:hover {
-        background:url('images/facebook-hover.jpg');
+        background:url('static/images/facebook-hover.jpg');
       }
       #desc {
         opacity: 0.9;
